update method finished
