# controller.go
@@ -7,27 +7,27 @@ import (
 )
 
 // getAlbums godoc
-// @Summary      List albums
-// @Description  get albums
-// @Tags         album
-// @Accept       json
-// @Produce      json
-// @Success      200                {array}          Album
-// @Router       /albums            [get]
+// @Summary         List albums
+// @Description     gets all albums in the database
+// @Tags            album
+// @Accept          json
+// @Produce         json
+// @Success         200                {array}          Album
+// @Router          /albums            [get]
 func getAlbums(c *gin.Context) {
     c.IndentedJSON(http.StatusOK, albums)
 }
 
 // postAlbums godoc
-// @Summary     Create a new album
-// @Desciption  Creates a new album in the database.
-// @Tags        album
-// @Accept      json
-// @Produce     json
-// @Param       album               body            Album           true            "Album JSON Object"
-// @Success     201                 {object}        Album           "OK"
-// @Failure     400                 {string}        string          "BadRequest"
-// @Router      /albums              [post]
+// @Summary         Create a new album
+// @Desciption      Creates a new album in the database.
+// @Tags            album
+// @Accept          json
+// @Produce         json
+// @Param           album               body            Album           true            "Album JSON Object"
+// @Success         201                 {object}        Album           "OK"
+// @Failure         400                 {string}        string          "BadRequest"
+// @Router          /albums             [post]
 func postAlbums(c *gin.Context) {
     var newAlbum Album
 
@@ -44,14 +44,14 @@ func postAlbums(c *gin.Context) {
 
 // getAlbumByID godoc
 // @Summary         Get an album
-// @Description     Get a single album from the database corresponding to the id in the path. Otherwise, returns error
+// @Description     Gets a single album from the database corresponding to the id in the path. Otherwise, returns error
 // @Tags            album
 // @Accept          json
 // @Produce         json
-// @Param           id              path            string          true            "Album Id"
-// @Success         200             {object}        Album           "OK"
-// @Failure         404             {string}        string          "NotFound"
-// @Router          /albums/{id}    [get]
+// @Param           id                  path            string          true            "Album Id"
+// @Success         200                 {object}        Album           "OK"
+// @Failure         404                 {string}        string          "NotFound"
+// @Router          /albums/{id}        [get]
 func getAlbumByID(c *gin.Context) {
     id := c.Param("id")
 
@@ -63,5 +63,40 @@ func getAlbumByID(c *gin.Context) {
             return
         }
     }
+    c.IndentedJSON(http.StatusNotFound, gin.H{"message": "album not found"})
+}
+
+// updateAlbumByID godoc
+// @Summary         Update an album
+// @Description     Updates an existing album in the database corresponding to the id sent. Otherwise, returns error
+// @Tags            album
+// @Accept          json
+// @Produce         json
+// @Param           album               body            Album           true            "Album JSON Object"
+// @Success         200                 {object}        Album           "OK"
+// @Failure         404                 {string}        string          "NotFound"
+// @Router          /albums             [put]
+func updateAlbumByID(c *gin.Context){
+    var album Album
+
+    // Call BindJSON to bind the received JSON to
+    // newAlbum.
+    if err := c.BindJSON(&album); err != nil {
+        return
+    }
+
+    // Loop over the list of albums, looking for
+    // an album whise ID value matches the parameter
+    for i, a := range albums {
+        if a.ID == album.ID {
+            albums[i].Title = album.Title
+            albums[i].Artist = album.Artist
+            albums[i].Price = album.Price
+
+            c.IndentedJSON(http.StatusOK, a)
+            return
+        }
+    }
+
     c.IndentedJSON(http.StatusNotFound, gin.H{"message": "album not found"})
 }
